--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -83,7 +83,7 @@
 
     <h2>9. Contact Us</h2>
     <p>If you have any questions about this privacy policy, please contact us at:</p>
-    <p><strong>Email:</strong> [Your Email Here]</p>
+    <p><strong>Email:</strong> MathCats.proton.me</p>
 
     <h2>10. Consent</h2>
     <p>By using Math Cats, you consent to this privacy policy.</p>
